fixed register user
